<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    android:id="@+id/cadsvMain"
    xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ButtonOrder" 
    android:background="@drawable/btn_style_border_roundcorner"
    android:padding="7dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" 
		android:focusable="true"
		android:focusableInTouchMode="true">
        
		<RelativeLayout
	        android:id="@+id/player_settings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	
	            <TextView
	                android:id="@+id/settings_label1"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/settings1"
	                android:textColor="@android:color/black"
	                android:textSize="14sp"
	                android:padding="2dp"
	            	android:background="@android:color/holo_orange_dark" />
	            
	            <LinearLayout 
	                android:id="@+id/set11_layout"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:layout_below="@id/settings_label1" 
	                android:layout_marginLeft="28dp"
	                android:layout_marginTop="6dp">
	                
		            <TextView
		                android:id="@+id/item1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:layout_marginRight="2dp"
		                android:text="@string/ps_item1" />

		            <EditText
		                android:id="@+id/player_id"
		                android:layout_width="170dp"
		                android:layout_height="wrap_content"
		                android:singleLine="true"
						android:gravity="center"
						android:ems="6"
		                android:hint="@string/hint1"/>
		            <Button
		                android:id="@+id/id_confirm_btn"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/confirm"
		                android:enabled="false"
                        android:visibility="gone"/>
	            </LinearLayout>
	            <LinearLayout 
	                android:id="@+id/set12_layout"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/set11_layout"
	                android:orientation="horizontal"
				    android:gravity="center_vertical"
	                android:layout_marginLeft="12dp"
	                android:layout_marginTop="6dp" >
		            
		            <TextView 
		                android:id="@+id/item12_layout"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginRight="2dp"
		                android:text="@string/ps_item2" />
					<EditText
					    android:id="@+id/manager_address_edit"
					    android:layout_width="170dp"
					    android:layout_height="wrap_content"
					    android:hint="@string/hint_server_address"
                        android:gravity="center"
					    android:inputType="textUri"
					    android:maxLines="1"
					    android:singleLine="true"/>

                </LinearLayout>
				
				<LinearLayout
	                android:id="@+id/set13_layout"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_below="@id/set12_layout"
				    android:layout_marginLeft="8dp"
				    android:layout_marginTop="2dp"
				    android:gravity="center_vertical"
				    android:orientation="horizontal" >
	
					<CheckBox 
					    android:id="@+id/check_keepratio"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content" />
		            <TextView 
		                android:id="@+id/check_keepratio_text"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:textSize="12sp"
		                android:text="@string/ps_item5" 
		                android:enabled="false"/>

                    <Button
                        android:id="@+id/btnExportRealm"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="18dp"
                        android:background="@android:color/darker_gray"
                        android:text="@string/export_realm_button"
                        android:visibility="gone"/>
	            </LinearLayout>
	            
			<LinearLayout
				android:id="@+id/set_switch_content_layout"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/set13_layout"
			    android:layout_marginLeft="8dp"
			    android:layout_marginTop="2dp"
			    android:gravity="center_vertical"
			    android:orientation="horizontal" >

				<CheckBox 
				    android:id="@+id/check_switch_content"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content" />
	            <TextView 
	                android:id="@+id/check_switch_content_text"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:textSize="12sp"
	                android:text="@string/ps_item_switch_content" 
	                android:enabled="false"/>
	            </LinearLayout>
	            
			<LinearLayout
				android:id="@+id/set14_layout"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/set_switch_content_layout"
				    android:layout_marginLeft="8dp"
				    android:layout_marginTop="2dp"
				    android:gravity="center_vertical"
				    android:orientation="horizontal"
					android:visibility="gone">
	
					<CheckBox 
					    android:id="@+id/check_manualip"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content" />
		            <TextView 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:textSize="12sp"
		                android:text="@string/ps_item3" 
		                android:enabled="false"/>
					<EditText 
					    android:id="@+id/player_ip1_edit"
					    android:layout_width="wrap_content"
					    android:layout_height="36dp"
					    android:inputType="numberDecimal"
					    android:gravity="center"
					    android:minWidth="42sp"
					    android:maxEms="3"
					    android:textSize="12sp"
					    android:enabled="false" />
					<EditText 
					    android:id="@+id/player_ip2_edit"
					    android:layout_width="wrap_content"
				    	android:layout_height="36dp"
					    android:inputType="numberDecimal"
					    android:gravity="center"
					    android:minWidth="42sp"
					    android:maxEms="3"
					    android:textSize="12sp"
					    android:enabled="false" />
					<EditText 
					    android:id="@+id/player_ip3_edit"
					    android:layout_width="wrap_content"
					    android:layout_height="36dp"
					    android:inputType="numberDecimal"
					    android:gravity="center"
					    android:minWidth="42sp"
					    android:maxEms="3"
					    android:textSize="12sp"
					    android:enabled="false" />
					<EditText 
					    android:id="@+id/player_ip4_edit"
					    android:layout_width="wrap_content"
					    android:layout_height="36dp"
					    android:inputType="numberDecimal"
					    android:gravity="center"
					    android:minWidth="42sp"
					    android:maxEms="3"
					    android:textSize="12sp"
					    android:enabled="false" />
				</LinearLayout>

				<TextView
				    android:id="@+id/version"
				    android:layout_toRightOf="@id/settings_label1"
				    android:layout_marginLeft="-52dip"
				    android:layout_width="140dp"
				    android:layout_height="wrap_content"
				    android:textColor="@android:color/black"
				    android:text="@string/app_version" />
        </RelativeLayout>

		<RelativeLayout
			android:id="@+id/auth_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/auth_label1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/settings3"
				android:textColor="@android:color/black"
				android:textSize="14sp"
				android:padding="2dp"
				android:background="@android:color/holo_red_dark" />

			<LinearLayout
				android:id="@+id/auth_layout1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:layout_marginLeft="12dp"
				android:layout_marginTop="28dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="2dp"
					android:text="@string/ps_item6" />

				<EditText
					android:id="@+id/sourceKey"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:gravity="center"
					android:text=""
					android:ems="9"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/auth_layout2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:layout_below="@id/auth_layout1"
				android:layout_marginLeft="12dp"
				android:layout_marginTop="6dp">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="2dp"
					android:text="@string/ps_item7" />
				<EditText
					android:id="@+id/authKey"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:singleLine="true"
					android:inputType="textPassword"
					android:gravity="center"
					android:text=""
					android:ems="6"/>
				<Button
					android:id="@+id/authBtn"
					android:layout_width="67dp"
					android:layout_height="48dp"
					android:text="@string/confirm"/>
			</LinearLayout>
		</RelativeLayout>
		    
		<RelativeLayout
			android:id="@+id/schedule_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
			<TextView
				android:id="@+id/settings_label2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/settings2"
				android:textColor="@android:color/black"
				android:textSize="14sp"
				android:padding="2dp"
				android:background="@android:color/holo_purple" />


				<LinearLayout
					android:id="@+id/sch1"
					android:layout_below="@id/settings_label2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="6dp" >

					<ToggleButton
						android:id="@+id/day_toggle1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="7dp"
						android:textSize="12sp"
						android:textOn="SUN"
						android:textOff="SUN" />

					<Button
						android:id="@+id/timePicker1from"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:layout_marginRight="3dp"
						android:text="00:00"/>
					<Button
						android:id="@+id/timePicker1to"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:text="23:59"/>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/sch2"
					android:layout_below="@id/sch1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="6dp" >

					<ToggleButton
						android:id="@+id/day_toggle2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:textSize="12sp"
						android:textOn="MON"
						android:textOff="MON" />
					<Button
						android:id="@+id/timePicker2from"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:layout_marginRight="3dp"
						android:text="00:00"/>
					<Button
						android:id="@+id/timePicker2to"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:text="23:59"/>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/sch3"
					android:layout_below="@id/sch2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="6dp" >

					<ToggleButton
						android:id="@+id/day_toggle3"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:textSize="12sp"
						android:textOn="TUE"
						android:textOff="TUE" />

					<Button
						android:id="@+id/timePicker3from"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:layout_marginRight="3dp"
						android:text="00:00"/>
					<Button
						android:id="@+id/timePicker3to"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:text="23:59"/>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/sch4"
					android:layout_below="@id/sch3"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="6dp" >

					<ToggleButton
						android:id="@+id/day_toggle4"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:textSize="12sp"
						android:textOn="WED"
						android:textOff="WED" />

					<Button
						android:id="@+id/timePicker4from"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:layout_marginRight="3dp"
						android:text="00:00"/>
					<Button
						android:id="@+id/timePicker4to"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:text="23:59"/>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/sch5"
					android:layout_below="@id/sch4"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="6dp" >

					<ToggleButton
						android:id="@+id/day_toggle5"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:textSize="12sp"
						android:textOn="THU"
						android:textOff="THU" />

					<Button
						android:id="@+id/timePicker5from"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:layout_marginRight="3dp"
						android:text="00:00"/>
					<Button
						android:id="@+id/timePicker5to"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:text="23:59"/>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/sch6"
					android:layout_below="@id/sch5"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="6dp" >

					<ToggleButton
						android:id="@+id/day_toggle6"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:textSize="12sp"
						android:textOn="FRI"
						android:textOff="FRI" />

					<Button
						android:id="@+id/timePicker6from"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:layout_marginRight="3dp"
						android:text="00:00"/>
					<Button
						android:id="@+id/timePicker6to"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:text="23:59"/>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/sch7"
					android:layout_below="@id/sch6"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="6dp" >

					<ToggleButton
						android:id="@+id/day_toggle7"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:textSize="12sp"
						android:textOn="SAT"
						android:textOff="SAT" />

					<Button
						android:id="@+id/timePicker7from"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:layout_marginRight="3dp"
						android:text="00:00"/>
					<Button
						android:id="@+id/timePicker7to"
						android:layout_width="wrap_content"
						android:layout_height="42dp"
						android:textSize="14sp"
						android:text="23:59"/>
				</LinearLayout>
				<Button
					android:id="@+id/btnSave"
					android:layout_below="@id/sch7"
					android:layout_width="match_parent"
					android:layout_height="36dp"
					android:layout_marginTop="6dp"
					android:background="@android:color/darker_gray"
					android:text="@android:string/ok"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
<!-- </LinearLayout> -->
